fixed dark theme issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,17 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  color-scheme: light;
 }
 
-html {
-color-scheme: light;
+html, body {
+  background: #ffffff;
+  color: #111827;
+}
+
+body {
+  background-color: white;
+  color: #111827;
 }
 
 @theme inline {
@@ -23,9 +28,3 @@ color-scheme: light;
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-  
-}
